# SensorEvalGui

./: .gitignore  AGENTS.md  LICENSE  README.md  Sensor_Output_Spec.md  config.py  main.py  memo.txt  pyproject.toml  requirements.txt
SensorEvalGui_src/: Sensor_Output_Spec.md
config/: default_config.yaml
core/: analysis.py  loader.py  pipeline.py  plotting.py  report_gen.py
gui/: main_window.py
libmkepicam/: __init__.py
oldversion(not used in current program)/: sensor_eval_gui.py
project/: config.yaml  flat.roi
project/capture/: IMX273_NoLens_Darkx_Gain0dB_80ms_400mm_Y16_0001.tiff  IMX273_NoLens_Darkx_Gain0dB_80ms_400mm_Y16_0002.tiff  IMX273_NoLens_Darkx_Gain0dB_80ms_400mm_Y16_0003.tiff  IMX273_NoLens_Darkx_Gain0dB_80ms_400mm_Y16_0004.tiff  IMX273_NoLens_Darkx_Gain0dB_80ms_400mm_Y16_0005.tiff  IMX273_NoLens_Darkx_Gain0dB_80ms_400mm_Y16_0006.tiff  IMX273_NoLens_Darkx_Gain0dB_80ms_400mm_Y16_0007.tiff  IMX273_NoLens_Darkx_Gain0dB_80ms_400mm_Y16_0008.tiff  IMX273_NoLens_Darkx_Gain0dB_80ms_400mm_Y16_0009.tiff  IMX273_NoLens_Darkx_Gain0dB_80ms_400mm_Y16_0010.tiff  IMX273_NoLens_Flat1x_Gain0dB_80ms_400mm_Y16_0001.tiff  IMX273_NoLens_Flat1x_Gain0dB_80ms_400mm_Y16_0002.tiff  IMX273_NoLens_Flat1x_Gain0dB_80ms_400mm_Y16_0003.tiff  IMX273_NoLens_Flat1x_Gain0dB_80ms_400mm_Y16_0004.tiff  (+7 more)
scripts/: fetch_from_repo.py  gen_dummy_stack.py  setup_env.sh
tests/: test_analysis.py  test_config.py  test_libmkepicam.py  test_pipeline.py  test_plotting.py  test_report_gen.py  test_robust_pspline.py
utils/: config.py  logger.py  metrics.py  robust_pspline.py  roi.py
(+372 files in other folders)
